@@ -1,6 +1,8 @@
 xine-lib (1.1.6) [UNRELEASED]
   * Split the DirectFB plugin into X11 and non-X versions.
   * Improve the Mac OS X video output plugin. Thanks to Matt Messier.
+  * Fixed the XcbXv plugin - an empty plugin would be built if "old" Xv
+    isn't detected.
 
 xine-lib (1.1.5)
   * Security fixes:
